# 73-para-board

./: Avi_73J_ParaBoard_v2.kicad_pcb  Avi_73J_ParaBoard_v2.kicad_prl  Avi_73J_ParaBoard_v2.kicad_pro  Avi_73J_ParaBoard_v2.kicad_sch  ParaBoard_Parts.csv  README.md  fp-info-cache  ~Avi_73J_ParaBoard_v2.kicad_pcb.lck  ~Avi_73J_ParaBoard_v2.kicad_sch.lck
hardware/開放基板/: .gitignore  開放基板.kicad_pcb  開放基板.kicad_pro  開放基板.kicad_sch
jlcpcb/: project.db
jlcpcb/gerber/: Avi_73J_ParaBoard_v2-CuBottom.gbr  Avi_73J_ParaBoard_v2-CuTop.gbr  Avi_73J_ParaBoard_v2-EdgeCuts.gbr  Avi_73J_ParaBoard_v2-MaskBottom.gbr  Avi_73J_ParaBoard_v2-MaskTop.gbr  Avi_73J_ParaBoard_v2-NPTH.drl  Avi_73J_ParaBoard_v2-PTH.drl  Avi_73J_ParaBoard_v2-PasteBottom.gbr  Avi_73J_ParaBoard_v2-PasteTop.gbr  Avi_73J_ParaBoard_v2-SilkBottom.gbr  Avi_73J_ParaBoard_v2-SilkTop.gbr  Avi_73J_ParaBoard_v2-VScore.gbr
jlcpcb/production_files/: CPL-Avi_73J_ParaBoard_v2.csv
software/: README.md
software/ParaBoard_esp-idf/: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
software/ParaBoard_esp-idf/components/command_handler/: CMakeLists.txt  command_handler.cpp
software/ParaBoard_esp-idf/components/command_handler/include/: command_handler.hpp
software/ParaBoard_esp-idf/docs/: specification.md
software/ParaBoard_esp-idf/log/: 1.txt  2.txt  3.txt  4.txt
software/ParaBoard_esp-idf/main/: CMakeLists.txt  app_main.cpp  app_main.cpp.test_liftoff_accel  app_main.cpp.test_peak_timer  main-test.cpp  main.c  main.cpp  test_liftoff_accel.hpp  test_liftoff_pressure.hpp  (+1 more)
(+53 files in other folders)
